feat: add style to lessons page

--- a/front-end/src/index.scss
+++ b/front-end/src/index.scss
@@ -12,3 +12,4 @@
 @import './styles/blocks/home.scss';
 @import './styles/blocks/lessons-layout.scss';
 @import './styles/blocks/games.scss';
+@import './styles/blocks/lessons.scss';
