--- a/front-end/src/styles/common/default.scss
+++ b/front-end/src/styles/common/default.scss
@@ -85,6 +85,7 @@
   text-align: left;
 
   @include tablet {
+    padding: 0 2rem;
     text-align: center;
   }
 
@@ -114,6 +115,7 @@
 
 .section-btn {
   flex-grow: 1;
+  width: 100%;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
@@ -143,5 +145,28 @@
 
   @include tablet {
     padding: 5rem;
+  }
+}
+
+.back-btn {
+  position: relative;
+  @include font-main;
+  color: $c-menu-inactive-link;
+  margin-right: auto;
+  cursor: pointer;
+  line-height: 2.4rem;
+  padding-left: 3.4rem;
+
+  &:hover {
+    color: $c-main-text;
+  }
+
+  &::before {
+    position: absolute;
+    content: '';
+    background: $bg-icon-back no-repeat center;
+    height: 2.4rem;
+    width: 2.4rem;
+    left: 0;
   }
 }
