--- a/front-end/src/styles/common/themes.scss
+++ b/front-end/src/styles/common/themes.scss
@@ -9,10 +9,10 @@ body.light {
   --c-big-btn-hover: #AFB8FA;
   --c-big-btn-active: #6D78CC;
   --c-big-btn-disabled: #8693B3;
-  --c-level-all: #F3F2FC;
-  --c-level-basic: #FFEBF5;
-  --c-level-intermediate: #D5E9EC;
-  --c-level-advanced: #E3F6DE;
+  --c-filter-all: #F3F2FC;
+  --c-filter-basic: #FFEBF5;
+  --c-filter-intermediate: #D5E9EC;
+  --c-filter-advanced: #E3F6DE;
   --c-small-btn-bg: #FFFFFF;
   --c-block-bg: #FAFAFA;
   --c-menu-inactive-link: #75819C;
@@ -65,10 +65,10 @@ body.dark {
   --c-big-btn-hover: #7DC2E4;
   --c-big-btn-active: #417B97;
   --c-big-btn-disabled: #8693B3;
-  --c-level-all: #426A81;
-  --c-level-basic: #995C7A;
-  --c-level-intermediate: #4C4574;
-  --c-level-advanced: #4B716C;
+  --c-filter-all: #426A81;
+  --c-filter-basic: #995C7A;
+  --c-filter-intermediate: #4C4574;
+  --c-filter-advanced: #4B716C;
   --c-small-btn-bg: #212C42;
   --c-block-bg: #212C42;
   --c-menu-inactive-link: #75819C;
@@ -120,14 +120,15 @@ $c-accent: var(--c-accent);
 $c-big-btn-hover: var(--c-big-btn-hover);
 $c-big-btn-active: var(c-big-btn-active);
 $c-big-btn-disabled: var(c-big-btn-active);
-$c-level-all: var(--c-level-all);
-$c-level-basic: var(--c-level-basic);
-$c-level-intermediate: var(--c-level-intermediate);
-$c-level-advanced: var(--c-level-advanced);
+$c-filter-all: var(--c-filter-all);
+$c-filter-basic: var(--c-filter-basic);
+$c-filter-intermediate: var(--c-filter-intermediate);
+$c-filter-advanced: var(--c-filter-advanced);
 $c-small-btn-bg: var(--c-small-btn-bg);
 $c-block-bg: var(--c-block-bg);
 $c-menu-inactive-link: var(--c-menu-inactive-link);
 $c-bg-modal-overlay: var(--c-modal-overlay);
+$c-error-text: #DA5C54;
 
 $bxs-modal-shadow: var(--bxs-modal-shadow);
 
@@ -137,6 +138,7 @@ $bg-footer-gradient: var(--bg-footer-gradient);
 $bg-icon-github: url(./assets/images/background/icons/icon-github.svg);
 $bg-home-wave: url(./assets/images/background/home/home-wave.svg);
 $bg-game-bg: url(./assets/images/games/games-game-1.png);
+$bg-icon-back: url(./assets/images/background/icons/icon-back.svg);
 
 $bg-theme-switcher: var(--bg-theme-switcher);
 $bg-app-logo: var(--bg-app-logo);
@@ -151,8 +153,8 @@ $bg-home-bg-2: var(--bg-home-bg-2);
 $bg-home-bg-3: var(--bg-home-bg-3);
 $bg-home-bg-blur-1: var(--bg-home-bg-blur-1);
 $bg-home-bg-blur-2: var(--bg-home-bg-blur-2);
-$bg-lessons-easy: var(--bg-level-easy);
-$bg-lessons-medium: var(--bg-level-medium);
+$bg-lessons-easy: var(--bg-lessons-easy);
+$bg-lessons-medium: var(--bg-lessons-medium);
 $bg-lessons-hard: var(--bg-lessons-hard);
 $bg-lessons-fact: var(--bg-lessons-fact);
 $bg-lessons-ru: var(--bg-lessons-ru);
