--- a/front-end/src/styles/blocks/games.scss
+++ b/front-end/src/styles/blocks/games.scss
@@ -3,8 +3,12 @@
   grid-template-columns: minmax(max-content, 110rem);
   row-gap: 3rem;
   max-width: 110rem;
-  padding: 0 5rem;
+  padding: 0 8rem;
   margin: 0 auto 4rem;
+
+  @include desktop-small {
+    padding: 0 5rem;
+  }
 
   @include mobile {
     padding: 0 1.6rem;
