--- a/front-end/src/styles/blocks/header.scss
+++ b/front-end/src/styles/blocks/header.scss
@@ -21,7 +21,7 @@
   padding: 1.5rem $desktop-margin 0;
   margin: 0 auto;
 
-  @include tablet {
+  @include desktop-small {
     padding: 1.5rem $tablet-margin 0;
   }
 
@@ -95,6 +95,7 @@
     transform: translate(-50%);
     width: 2.4rem;
     height: 0.2rem;
+    border-radius: $small-border-radius;
     background-color: $c-accent;
   }
 }
