--- a/front-end/src/styles/common/mixins.scss
+++ b/front-end/src/styles/common/mixins.scss
@@ -98,3 +98,18 @@
 @mixin font-subtitle-mobile {
   font-size: 2rem;
 }
+
+@mixin default-input {
+  @include font-main-small;
+  display: block;
+  color: $c-main-text;
+  padding: 1rem;
+  border: 0.1rem solid $c-accent;
+  border-radius: $small-border-radius;
+}
+
+@mixin default-modal {
+  position: absolute;
+  background-color: $c-body-bg;
+  box-shadow: $bxs-modal-shadow;
+}
