fix: adjust styles

--- a/front-end/src/index.scss
+++ b/front-end/src/index.scss
@@ -13,3 +13,4 @@
 @import './styles/blocks/lessons-layout.scss';
 @import './styles/blocks/games.scss';
 @import './styles/blocks/lessons.scss';
+@import './styles/blocks/registration.scss'
