--- a/front-end/src/styles/blocks/lessons.scss
+++ b/front-end/src/styles/blocks/lessons.scss
@@ -4,19 +4,23 @@
   row-gap: 6rem;
   max-width: 110rem;
   padding: 0 8rem;
-  margin: 6rem auto 5rem;
+  margin: 6rem auto;
 
   @include desktop-small {
-    padding: 0 5rem;
+    padding: 0 4rem;
   }
 
   @include tablet {
     row-gap: 4rem;
+    margin: 5rem 0;
+    padding: 0 3rem;
   }
 
   @include mobile {
     padding: 0 1.6rem;
     row-gap: 2rem;
+    margin: 3rem 0;
+    padding: 0 1.6rem;
   }
 }
 
@@ -91,14 +95,27 @@
 }
 
 .lessons-list {
-  display: flex;
-  justify-content: space-between;
-  flex-wrap: wrap;
+  display: grid;
+  grid-template-columns: repeat(5, minmax(0, 1fr));
   column-gap: 1rem;
   row-gap: 2rem;
+  justify-content: space-between;
+  justify-items: center;
+
+  @include desktop-small {
+    grid-template-columns: repeat(4, minmax(0, 1fr));
+  }
 
   @include tablet {
-    justify-content: center;
+    grid-template-columns: repeat(3, minmax(0, 1fr));
+  }
+
+  @include mobile {
+    grid-template-columns: repeat(2, minmax(0, 1fr));
+  }
+
+  @media (max-width: 400px) {
+    grid-template-columns: repeat(1, minmax(0, 1fr));
   }
 }
 
