--- a/front-end/src/styles/common/themes.scss
+++ b/front-end/src/styles/common/themes.scss
@@ -36,6 +36,7 @@ body.light {
   --bg-home-bg-3: url(./assets/images/background/home/home-bg-3-light.svg);
   --bg-home-bg-blur-1: url(./assets/images/background/home/home-bg-blur-1-light.svg);
   --bg-home-bg-blur-2: url(./assets/images/background/home/home-bg-blur-2-light.svg);
+  --bg-home-bg-blur-3: url(./assets/images/background/home/home-bg-blur-3-light.svg);
   --bg-lessons-easy: url(./assets/images/background/lessons/lessons-easy-light.svg);
   --bg-lessons-medium: url(./assets/images/background/lessons/lessons-medium-light.svg);
   --bg-lessons-hard: url(./assets/images/background/lessons/lessons-hard-light.svg);
@@ -92,6 +93,7 @@ body.dark {
   --bg-home-bg-3: url(./assets/images/background/home/home-bg-3-dark.svg);
   --bg-home-bg-blur-1: url(./assets/images/background/home/home-bg-blur-dark.svg);
   --bg-home-bg-blur-2: url(./assets/images/background/home/home-bg-blur-dark.svg);
+  --bg-home-bg-blur-3: url(./assets/images/background/home/home-bg-blur-3-dark.svg);
   --bg-lessons-easy: url(./assets/images/background/lessons/lessons-easy-dark.svg);
   --bg-lessons-medium: url(./assets/images/background/lessons/lessons-medium-dark.svg);
   --bg-lessons-hard: url(./assets/images/background/lessons/lessons-hard-dark.svg);
@@ -153,6 +155,7 @@ $bg-home-bg-2: var(--bg-home-bg-2);
 $bg-home-bg-3: var(--bg-home-bg-3);
 $bg-home-bg-blur-1: var(--bg-home-bg-blur-1);
 $bg-home-bg-blur-2: var(--bg-home-bg-blur-2);
+$bg-home-bg-blur-3: var(--bg-home-bg-blur-3);
 $bg-lessons-easy: var(--bg-lessons-easy);
 $bg-lessons-medium: var(--bg-lessons-medium);
 $bg-lessons-hard: var(--bg-lessons-hard);
