feat: add registration errors description and layout

--- a/front-end/src/styles/common/default.scss
+++ b/front-end/src/styles/common/default.scss
@@ -171,11 +171,10 @@
   display: none;
 }
 
-.error-block {
+.error-text {
   @include font-main;
 
   @include mobile {
     @include font-main-small;
   }
 }
-
