feat: add styles for registration error block

--- a/front-end/src/styles/blocks/registration.scss
+++ b/front-end/src/styles/blocks/registration.scss
@@ -1,3 +1,61 @@
+// Mixins
+@mixin accesibility-text {
+  font-size: 0;
+}
+
+// Error
+.error-content {
+  @include default-wrapper;
+  @include font-main;
+  position: relative;
+  justify-content: space-between;
+  text-align: left;
+
+  @include mobile {
+    @include font-main-small;
+  }
+}
+
+.error-text {
+  color: $c-error-text;
+}
+
+.error-icon {
+  @include accesibility-text;
+  @include interaction-effects;
+  @include small-btn-bg;
+  width: 2.2rem;
+  height: 2.2rem;
+  background-image: $bg-icon-error-hint;
+}
+
+.error-hint {
+  position: absolute;
+  top: calc(100% + 1rem);
+  width: 28rem;
+  left: 50%;
+  transform: translateX(-50%);
+  background-color: $c-block-bg;
+  padding: 2rem;
+  border-radius: $big-border-radius;
+  box-shadow: $bxs-modal-shadow;
+}
+
+.error-hint-content {
+  &:first-child {
+    margin-bottom: 2rem;
+  }
+}
+
+.error-hint-mark {
+  color: $c-accent;
+}
+
+.error-hint-text {
+  color: $c-main-text;
+}
+
+// Registration
 .registration-modal {
   @include default-modal;
   @include default-wrapper;
