--- a/front-end/src/styles/common/themes.scss
+++ b/front-end/src/styles/common/themes.scss
@@ -1,9 +1,9 @@
 body.light {
-  --c-body-bg:  #FFFFFF;
-  --c-main-text:  #212529;
-  --c-small-text:  #212529;
-  --c-main-title:  #212529;
-  --c-subtitle:  #212529;
+  --c-body-bg: #FFFFFF;
+  --c-main-text: #212529;
+  --c-small-text: #212529;
+  --c-main-title: #212529;
+  --c-subtitle: #212529;
   --c-accent: #212529;
   --c-accent: #848ED9;
   --c-big-btn-hover: #AFB8FA;
@@ -53,14 +53,15 @@ body.light {
   --bg-arrow-left: url(./assets/images/background/icons/icon-arrow-left-light.svg);
   --bg-arrow-right: url(./assets/images/background/icons/icon-arrow-right-light.svg);
   --bg-icon-burger-menu: url(./assets/images/background/icons/icon-burger-menu-light.svg);
+  --bg-icon-error-hint: url(./assets/images/background/icons/icon-error-hint.svg);
 }
 
 body.dark {
-  --c-body-bg:  #1E273A;
-  --c-main-text:  #F3F3F4;
-  --c-small-text:  #8693B3;
-  --c-main-title:  #4794BA;
-  --c-subtitle:  #8693B3;
+  --c-body-bg: #1E273A;
+  --c-main-text: #F3F3F4;
+  --c-small-text: #8693B3;
+  --c-main-title: #4794BA;
+  --c-subtitle: #8693B3;
   --c-accent: #4794BA;
   --c-accent: #4794BA;
   --c-big-btn-hover: #7DC2E4;
@@ -110,15 +111,16 @@ body.dark {
   --bg-arrow-left: url(./assets/images/background/icons/icon-arrow-left-dark.svg);
   --bg-arrow-right: url(./assets/images/background/icons/icon-arrow-right-dark.svg);
   --bg-icon-burger-menu: url(./assets/images/background/icons/icon-burger-menu-dark.svg);
+  --bg-icon-error-hint: url(./assets/images/background/icons/icon-error-hint.svg);
 }
 
-$c-body-bg: var(--c-body-bg); 
-$c-main-text: var(--c-main-text); 
-$c-small-text: var(--c-main-text); 
-$c-home-title: var(--c-accent); 
+$c-body-bg: var(--c-body-bg);
+$c-main-text: var(--c-main-text);
+$c-small-text: var(--c-main-text);
+$c-home-title: var(--c-accent);
 $c-main-title: var(--c-main-title);
 $c-subtitle: var(--c-subtitle);
-$c-accent: var(--c-accent); 
+$c-accent: var(--c-accent);
 $c-big-btn-hover: var(--c-big-btn-hover);
 $c-big-btn-active: var(c-big-btn-active);
 $c-big-btn-disabled: var(c-big-btn-active);
@@ -172,3 +174,4 @@ $bg-lessons-star: var(--bg-lessons-star);
 $bg-arrow-left: var(--bg-arrow-left);
 $bg-arrow-right: var(--bg-arrow-right);
 $bg-icon-burger-menu: var(--bg-icon-burger-menu);
+$bg-icon-error-hint: var(--bg-icon-error-hint);
