--- a/front-end/src/styles/blocks/registration.scss
+++ b/front-end/src/styles/blocks/registration.scss
@@ -60,7 +60,7 @@
   @include default-modal;
   @include default-wrapper;
   flex-direction: column;
-  row-gap: 1rem;
+  gap: 2rem;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
@@ -124,7 +124,7 @@
 
 .registration-switch-btn {
   display: block;
-  margin: 4rem auto 2.8rem;
+  margin: 5rem auto 5.8rem;
 
   &:hover .registration-switch-action {
     color: $c-main-text;
