--- a/front-end/src/styles/blocks/registration.scss
+++ b/front-end/src/styles/blocks/registration.scss
@@ -24,7 +24,7 @@
   @include accesibility-text;
   @include interaction-effects;
   @include small-btn-bg;
-  width: 2.2rem;
+  min-width: 2.2rem;
   height: 2.2rem;
   background-image: $bg-icon-error-hint;
 }
