--- a/front-end/src/styles/common/variables.scss
+++ b/front-end/src/styles/common/variables.scss
@@ -10,6 +10,7 @@ $fw-extrabold: 800;
 $desktop-width: 144rem;
 $desktop-small-width: 1079px;
 $tablet-width: 899px;
+$tablet-small-width: 799px;
 $mobile-width: 599px;
 
 $desktop-margin: 8rem;
