--- a/front-end/src/index.scss
+++ b/front-end/src/index.scss
@@ -13,4 +13,6 @@
 @import './styles/blocks/lessons-layout.scss';
 @import './styles/blocks/games.scss';
 @import './styles/blocks/lessons.scss';
-@import './styles/blocks/registration.scss'
+@import './styles/blocks/error.scss';
+@import './styles/blocks/registration.scss';
+@import './styles/blocks/profile.scss';
