feat: add basic style and functionality for test

--- a/front-end/src/index.scss
+++ b/front-end/src/index.scss
@@ -13,4 +13,5 @@
 @import './styles/blocks/lessons-layout.scss';
 @import './styles/blocks/games.scss';
 @import './styles/blocks/lessons.scss';
-@import './styles/blocks/registration.scss'
+@import './styles/blocks/registration.scss';
+@import './styles/blocks/test.scss';
