--- a/front-end/src/styles/common/mixins.scss
+++ b/front-end/src/styles/common/mixins.scss
@@ -118,10 +118,16 @@
 @mixin default-input {
   @include font-main-small;
   display: block;
+  height: 4rem;
   color: $c-main-text;
   padding: 1rem;
   border: 0.1rem solid $c-accent;
   border-radius: $small-border-radius;
+
+  &:disabled {
+    border-color: transparent;
+    background-color: $c-block-bg;
+  }
 }
 
 @mixin default-avatar {
