--- a/front-end/src/styles/blocks/profile.scss
+++ b/front-end/src/styles/blocks/profile.scss
@@ -26,8 +26,6 @@
 
 .profile-modal-content {
   position: relative;
-  width: 100%;
-  height: 100%;
 }
 
 .profile-btn {
@@ -94,6 +92,15 @@
   margin: 0 auto;
 }
 
+.profile-subtitle {
+  @include font-title-mobile;
+  margin-bottom: 2rem;
+
+  @include mobile {
+    margin-bottom: 1rem;
+  }
+}
+
 .profile-avatars-wrapper {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
@@ -110,5 +117,5 @@
   @include font-main;
   position: absolute;
   color: $c-main-text;
-  bottom: -10.1rem;
+  bottom: calc((5rem - 2.1rem) / 2);
 }
