--- a/front-end/src/styles/blocks/lessons-layout.scss
+++ b/front-end/src/styles/blocks/lessons-layout.scss
@@ -38,6 +38,7 @@
   border-radius: $big-border-radius;
   align-items: center;
   justify-content: space-between;
+  column-gap: 2rem;
 
   @include tablet {
     padding: 3rem 2rem;
@@ -50,7 +51,7 @@
   display: flex;
   background-color: $c-block-bg;
   border-radius: $big-border-radius;
-  padding: 7rem 5rem 7rem 15rem;
+  padding: 5rem 5rem 5rem 15rem;
   align-items: center;
   position: relative;
 
