feat: add functionality of saving changes in user data

--- a/front-end/src/styles/blocks/error.scss
+++ b/front-end/src/styles/blocks/error.scss
@@ -35,6 +35,10 @@
   box-shadow: $bxs-modal-shadow;
 }
 
+.profile-modal-content .error-hint {
+  width: 100%;
+}
+
 .error-hint-content {
   &:first-child {
     margin-bottom: 2rem;
