--- a/front-end/src/styles/common/variables.scss
+++ b/front-end/src/styles/common/variables.scss
@@ -12,6 +12,7 @@ $desktop-small-width: 1079px;
 $tablet-width: 899px;
 $tablet-small-width: 799px;
 $mobile-width: 599px;
+$mobile-small-width: 422px;
 
 $desktop-margin: 8rem;
 $tablet-margin: 5rem;
