fix: fix overlay of password text and password visibility button

--- a/front-end/src/styles/blocks/registration.scss
+++ b/front-end/src/styles/blocks/registration.scss
@@ -46,6 +46,10 @@
   margin-top: 0.2rem;
 }
 
+.registration-password-input {
+  @include password-input;
+}
+
 .registration-password-visibility-btn {
   bottom: 1rem;
   right: 1rem;
