feat: add basic functionality and styles to lesson page

--- a/front-end/src/styles/common/themes.scss
+++ b/front-end/src/styles/common/themes.scss
@@ -59,6 +59,16 @@ body.light {
   --bg-icon-error-hint: url(./assets/images/background/icons/icon-error-hint.svg);
   --bg-icon-restart-hover: url(./assets/images/background/icons/icon-restart-hover-light.svg);
   --bg-test-ribbon: url(./assets/images/background/testing/bg-test-ribbon-light.svg);
+  --bg-lesson-restart: url(./assets/images/background/icons/icon-lesson-restart-light.svg);
+  --bg-lesson-restart-hover: url(./assets/images/background/icons/icon-lesson-restart-hover-light.svg);
+  --bg-lesson-font: url(./assets/images/background/icons/icon-lesson-font-light.svg);
+  --bg-lesson-font-hover: url(./assets/images/background/icons/icon-lesson-font-hover-light.svg);
+  --bg-lesson-bg: url(./assets/images/background/icons/icon-lesson-bg-light.svg);
+  --bg-lesson-bg-hover: url(./assets/images/background/icons/icon-lesson-bg-hover-light.svg);
+  --bg-lesson-sound: url(./assets/images/background/icons/icon-lesson-sound-light.svg);
+  --bg-lesson-sound-hover: url(./assets/images/background/icons/icon-lesson-sound-hover-light.svg);
+  --bg-lesson-kb: url(./assets/images/background/icons/icon-lesson-kb-light.svg);
+  --bg-lesson-kb-hover: url(./assets/images/background/icons/icon-lesson-kb-hover-light.svg);
 }
 
 body.dark {
@@ -122,6 +132,16 @@ body.dark {
   --bg-icon-error-hint: url(./assets/images/background/icons/icon-error-hint.svg);
   --bg-icon-restart-hover: url(./assets/images/background/icons/icon-restart-hover-dark.svg);
   --bg-test-ribbon: url(./assets/images/background/testing/bg-test-ribbon-dark.svg);
+  --bg-lesson-restart: url(./assets/images/background/icons/icon-lesson-restart-dark.svg);
+  --bg-lesson-restart-hover: url(./assets/images/background/icons/icon-lesson-restart-hover-dark.svg);
+  --bg-lesson-font: url(./assets/images/background/icons/icon-lesson-font-dark.svg);
+  --bg-lesson-font-hover: url(./assets/images/background/icons/icon-lesson-font-hover-dark.svg);
+  --bg-lesson-bg: url(./assets/images/background/icons/icon-lesson-bg-dark.svg);
+  --bg-lesson-bg-hover: url(./assets/images/background/icons/icon-lesson-bg-hover-dark.svg);
+  --bg-lesson-sound: url(./assets/images/background/icons/icon-lesson-sound-dark.svg);
+  --bg-lesson-sound-hover: url(./assets/images/background/icons/icon-lesson-sound-hover-dark.svg);
+  --bg-lesson-kb: url(./assets/images/background/icons/icon-lesson-kb-dark.svg);
+  --bg-lesson-kb-hover: url(./assets/images/background/icons/icon-lesson-kb-hover-dark.svg);
 }
 
 $c-body-bg: var(--c-body-bg);
@@ -192,3 +212,13 @@ $bg-icon-burger-menu: var(--bg-icon-burger-menu);
 $bg-icon-error-hint: var(--bg-icon-error-hint);
 $bg-icon-restart-hover: var(--bg-icon-restart-hover);
 $bg-test-ribbon: var(--bg-test-ribbon);
+$bg-lesson-restart: var(--bg-lesson-restart);
+$bg-lesson-restart-hover: var(--bg-lesson-restart-hover);
+$bg-lesson-font: var(--bg-lesson-font);
+$bg-lesson-font-hover: var(--bg-lesson-font-hover);
+$bg-lesson-bg: var(--bg-lesson-bg);
+$bg-lesson-bg-hover: var(--bg-lesson-bg-hover);
+$bg-lesson-sound: var(--bg-lesson-sound);
+$bg-lesson-sound-hover: var(--bg-lesson-sound-hover);
+$bg-lesson-kb: var(--bg-lesson-kb);
+$bg-lesson-kb-hover: var(--bg-lesson-kb-hover);
