--- a/front-end/src/index.scss
+++ b/front-end/src/index.scss
@@ -16,4 +16,5 @@
 @import './styles/blocks/error.scss';
 @import './styles/blocks/registration.scss';
 @import './styles/blocks/profile.scss';
+@import './styles/blocks/lesson.scss';
 @import './styles/blocks/test.scss';
