--- a/front-end/src/styles/blocks/lessons.scss
+++ b/front-end/src/styles/blocks/lessons.scss
@@ -95,26 +95,27 @@
 
 .lessons-list {
   display: grid;
-  grid-template-columns: repeat(5, minmax(0, 1fr));
+  grid-template-columns: repeat(5, 18rem);
   column-gap: 1rem;
   row-gap: 2rem;
   justify-content: space-between;
   justify-items: center;
 
   @include desktop-small {
-    grid-template-columns: repeat(4, minmax(0, 1fr));
+    grid-template-columns: repeat(4, 18rem);
   }
 
   @include tablet {
-    grid-template-columns: repeat(3, minmax(0, 1fr));
+    grid-template-columns: repeat(3, 18rem);
+    justify-content: center;
   }
 
-  @include mobile {
-    grid-template-columns: repeat(2, minmax(0, 1fr));
+  @media (max-width: 700px) {
+    grid-template-columns: repeat(2, 18rem);
   }
 
-  @media (max-width: 400px) {
-    grid-template-columns: repeat(1, minmax(0, 1fr));
+  @media (max-width: 410px) {
+    grid-template-columns: repeat(1, 18rem);
   }
 }
 
