feat: add styles for action confirmation modals

--- a/front-end/src/index.scss
+++ b/front-end/src/index.scss
@@ -17,3 +17,4 @@
 @import './styles/blocks/registration.scss';
 @import './styles/blocks/profile.scss';
 @import './styles/blocks/test.scss';
+@import './styles/blocks/confirmation.scss';
