--- a/front-end/src/styles/common/themes.scss
+++ b/front-end/src/styles/common/themes.scss
@@ -146,7 +146,7 @@ $c-mistake: var(--c-mistake);
 $c-correction: var(--c-correction);
 $c-correct: var(--c-correct);
 $c-error-text: #DA5C54;
-
+$c-confirmation-yes-text: #F3F3F4;
 
 $bxs-modal-shadow: var(--bxs-modal-shadow);
 
