feat: add keyboard to lesson page

--- a/front-end/src/index.scss
+++ b/front-end/src/index.scss
@@ -18,3 +18,4 @@
 @import './styles/blocks/profile.scss';
 @import './styles/blocks/lesson.scss';
 @import './styles/blocks/test.scss';
+@import './styles/blocks/keyboard.scss';
