feat: add interface and parsing for lesson data

--- a/front-end/src/styles/common/default.scss
+++ b/front-end/src/styles/common/default.scss
@@ -132,6 +132,15 @@
   background-color: $c-block-bg;
   cursor: pointer;
 
+  &:hover {
+    background-color: $c-accent;
+    color: white;
+
+    .section-title {
+      color: white;
+    }
+  }
+
   @include tablet {
     padding-left: 0;
     height: 35rem;
