--- a/front-end/src/styles/common/themes.scss
+++ b/front-end/src/styles/common/themes.scss
@@ -6,7 +6,7 @@ body.light {
   --c-subtitle: #212529;
   --c-accent: #212529;
   --c-accent: #848ED9;
-  --c-big-btn-hover: #AFB8FA;
+  --c-big-btn-hover: #98A2E9;
   --c-big-btn-active: #6D78CC;
   --c-big-btn-disabled: #8693B3;
   --c-filter-all: #F3F2FC;
