--- a/front-end/src/styles/common/default.scss
+++ b/front-end/src/styles/common/default.scss
@@ -211,3 +211,13 @@
 .password-open {
   background-image: $bg-modal-password-closed;
 }
+
+.subtitle {
+  @include font-title-mobile;
+  color: $c-main-text;
+  margin-bottom: 2rem;
+
+  @include tablet-small {
+    text-align: center;
+  }
+}
