refactor: move styles for burger menu to separate file

--- a/front-end/src/index.scss
+++ b/front-end/src/index.scss
@@ -20,3 +20,4 @@
 @import './styles/blocks/test.scss';
 @import './styles/blocks/keyboard.scss';
 @import './styles/blocks/confirmation.scss';
+@import './styles/blocks/burger-menu.scss';
