feat: add styles for about us page

--- a/front-end/src/index.scss
+++ b/front-end/src/index.scss
@@ -21,3 +21,4 @@
 @import './styles/blocks/keyboard.scss';
 @import './styles/blocks/confirmation.scss';
 @import './styles/blocks/burger-menu.scss';
+@import './styles/blocks/about.scss';
