--- a/front-end/src/styles/common/mixins.scss
+++ b/front-end/src/styles/common/mixins.scss
@@ -153,7 +153,7 @@
   border-radius: 50%;
 }
 
-@mixin profile-avatar-wrapper {
+@mixin avatar-wrapper {
   width: 15rem;
   height: 15rem;
 }
@@ -162,4 +162,13 @@
   background-color: $c-block-bg;
   border-radius: $big-border-radius;
   box-shadow: $bxs-modal-shadow;
+}
+
+@mixin about-desc {
+  @include font-main;
+  width: 100%;
+  color: $c-main-text;
+  background-color: $c-block-bg;
+  border-radius: $big-border-radius;
+  margin-bottom: 2rem;
 }
