--- a/front-end/src/styles/blocks/profile.scss
+++ b/front-end/src/styles/blocks/profile.scss
@@ -67,7 +67,7 @@
 }
 
 .profile-avatar-wrapper {
-  @include profile-avatar-wrapper;
+  @include avatar-wrapper;
   grid-row: 1/3;
 
   @include tablet-small {
@@ -159,7 +159,7 @@
 }
 
 .avatar-btn {
-  @include profile-avatar-wrapper;
+  @include avatar-wrapper;
 
   @include tablet-small {
     margin: 0 auto;
@@ -185,5 +185,11 @@
   @include tablet-small {
     position: static;
     margin: 0 auto 3rem;
+  }
+}
+
+.profile-subtitle {
+  @include tablet-small {
+    text-align: center;
   }
 }
