fix: lesson button display

--- a/front-end/src/styles/blocks/keyboard.scss
+++ b/front-end/src/styles/blocks/keyboard.scss
@@ -4,7 +4,7 @@
   flex-direction: column;
   max-width: 63.5rem;
   gap: $keyboard-gap;
-  border-radius: 5px;
+  border-radius: 0.5rem;
   user-select: none;
   margin: 0 auto;
 }
