--- a/front-end/src/styles/blocks/lessons.scss
+++ b/front-end/src/styles/blocks/lessons.scss
@@ -138,8 +138,28 @@
   }
 }
 
+.lesson-btn-stars {
+  display: flex;
+  align-items: center;
+  column-gap: 0.5rem;
+  padding-right: 1rem;
+}
+
+.lesson-btn-star {
+  width: 1.6rem;
+  height: 1.6rem;
+  background: $bg-lessons-star no-repeat center;
+}
+
+.lesson-btn-star-empty {
+  width: 1.6rem;
+  height: 1.6rem;
+  background: $bg-lessons-star-empty no-repeat center;
+}
+
 .lesson-btn-top {
   display: flex;
+  width: 100%;
   justify-content: space-between;
 }
 
